# trading_bot_t2

./: .coverage  .env.example  .flake8  .gitignore  .gitignore.bak  HANDOVER_PROTOCOL.md  Implementation_Plan.md  MIGRATION_PLAN.md  Memory_Bank.md  README.md  agent_integration_example.py  backtesting_integration_example.py  decision_maker_integration_demo.py  demo_decision_logging.py  pyproject.toml  requirements.txt  test_env.py
.github/workflows/: ci.yml
Docs/: 05_Bill_Williams_Entry_Exit_Logic.md  06_Troubleshooting.md  07_User_Guide.md  2025-07-12_market_entry_report.md  download the complete design document.md  initial_design.md
agentic_project_management/rules/: README.md
chatmodes/: PM_mode.chatmode.md  idea_gen_mode.chatmode.md  planner_mode.chatmode.md  prompt_mode.chatmode.md
config/: llm_config.yml
examples/: README.md  agent_integration_example.py  backtesting_integration_example.py  decision_maker_integration_demo.py  demo_decision_logging.py  test_visualization_simple.py  visualization_integration_example.py
logs/: demo_export.json
prompts/: phase2_task2_1_signal_logic_assignment.md  phase2_task2_3_decision_maker_agent.md  signal_confirmation_prompt.txt
spec/: spec-design-ai-multi-agent-trading-bot.md
src/: __init__.py  env_config.py  llm_config.py  logging_setup.py  main.py
src/agents/: __init__.py  base_agent.py  decision_maker_agent.py  risk_assessment_agent.py  schemas.py  signal_detection_agent.py
src/backtesting/: __init__.py  config.py  engine.py  metrics.py
src/cli/: __init__.py  config.py  main.py  (+1 more)
tests/: conftest.py
(+56 files in other folders)
